M1-681: Make a dead transport honest on readiness and on Signal
A dead transport must be visible on every operator surface, for every v1
adapter, and must drive recovery. M1-674 delivered that for the SimpleX
WebSocket; this finishes it for the readiness payload and for Signal.

The readiness payload now folds MessagingAdapter.connected(), so a started,
non-terminally-failed adapter whose transport is dead reads DOWN instead of
false-green. Signal's reader-loop exit latches the JSON-RPC channel dead on
every exit arm (clean EOF, IOException, mid-oversize-drain EOF, escaping
RuntimeException) via a finally, drains pending futures closed-before-ack
PERMANENT, and fires the existing supervised-restart hook — so detection no
longer depends on outbound traffic, which the dead reader itself removes.
The consecutive-timeout escalation is preserved as the hung-but-alive-daemon
detector; the two must not double-fire for one death.

Transport state moves onto a per-connection SignalConnection carrier that
connect() swaps as a unit, so a reader that outlived disconnect()'s bounded
join cannot reach — latch, drain, or tear down — the connection that replaced
it. The one effect a carrier cannot scope, the SIGKILL of the shared
subprocess, is gated on the daemon generation the dying connection was built
for still being live (SignalSubprocess.generation()), fired outside any lock;
a conn==current check alone is insufficient across the ~15 s
respawn-before-retire window. docs/spec/messaging.md withdraws the v1 Signal
carve-out M1-674 had to add.

Two redteam-multi rounds found real, NEW-in-diff reliability defects (the
zombie-reader TOCTOU, then the conn==current insufficiency); both fixed
in-band. Round-3 redteam-multi (claude, codex, kimi) CLEAN. Two SPI-default
footguns surfaced are filed, not folded: M1-682 (connected() interface
default) and M1-683 (the daemon-generation constructor default).

Alternatives considered:
  - A single lifecycle monitor over the ownership check ins